# DualTrits

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  DualTrits.cpp  DualTrits.h  README.md  dual_trits_pack.hpp  main.cpp  run_benchmarks.sh  run_benchmarks_cuda.sh  run_docker.sh  run_tests.sh  run_tests_cuda.sh
.github/scripts/: compare_benchmarks.py
.github/workflows/: benchmark.yml  benchmark_cuda.yml  ci.yml  cuda_ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  arithmetic_tests  arithmetic_tests[1]_include.cmake  arithmetic_tests[1]_tests.cmake  cmake_install.cmake  packing_benchmarks  packing_tests  packing_tests[1]_include.cmake  packing_tests[1]_tests.cmake  project_float
benchmarks/: benchmark_cpu_packing.cpp  benchmark_packing.cpp  benchmark_packing_cuda.cu
cmake/: FindMPFR.cmake  FindMPFRCPP.cmake
include/common/: DualTrits.hpp
include/cpu/: dual_trits_pack.hpp
include/cuda/: dual_trits_pack.cuh
include/cuda/kernels/: pack_kernels.cuh
src/: main.cpp
src/common/: DualTrits.cpp  DualTrits.h
src/cpu/: dual_trits_pack.cpp  dual_trits_pack.hpp
src/cuda/: dual_trits_pack.cu  dual_trits_pack.cuh
src/cuda/kernels/: pack_kernels.cu
tests/: test_addition_subtraction.cpp  test_arithmetic.cpp  test_division.cpp  test_multiplication.cpp  test_packing.cpp  test_packing_cuda.cpp  test_packing_cuda.cu  test_precision.cpp
